--- a/src/components/Pages/CreateDepone/index.jade
+++ b/src/components/Pages/CreateDepone/index.jade
@@ -4360,7 +4360,7 @@
                                                 tr
                                                     td(colspan='2', style='width: 100%;')
                                                         .o_horizontal_separator
-                                                            | Contact Informations
+                                                            | Contact Information
                                                 tr
                                                     td.o_td_label(colspan='1')
                                                         label.o_form_label(for='o_field_input_595')
@@ -4377,11 +4377,9 @@
                                                 tr
                                                     td.o_td_label(colspan='1')
                                                         label.o_form_label(for='o_field_input_596')
-                                                            | Work Mobiles
+                                                            | Work Mobile
                                                     td(colspan='1', style='width: 100%;')
                                                         input#o_field_input_596.o_form_input.o_form_field(type='text',v-model="workMobile")
-
-
                                                 tr
                                                     td.o_td_label(colspan='1')
                                                         label.o_form_label(for='o_field_input_597')
