--- a/src/components/Pages/Job/index.jade
+++ b/src/components/Pages/Job/index.jade
@@ -2,12 +2,14 @@
     DashboardController( v-bind:save='true',v-bind:duplicatedropbtn='true',v-bind:deletedropbtn='true',v-bind:planorderbtn='false',v-bind:heading="nextactivity",v-bind:editbtn='true',v-bind:createbtn='true',v-bind:dropdownMenuButton='true',v-bind:Attachmentbtn='true',v-bind:actionbtn='true', v-bind:links="btnlinks",v-bind:num1='true',v-bind:num2='true')
         .col-sm-6(style='padding:0px;')(slot='job')
             h4.samodashheading(style="font-size: 18px;") Job Positions/ {{job_tittle}}
+
         span.o_pager_value(slot='page') {{counter}}
             |  /
             span.o_pager_limit(style="padding-right: 6px;") {{num}}
             span.btn-group.btn-group-sm
                 button.fa.fa-chevron-left.btn.btn-icon.o_pager_previous#num10(@click="counter--",style='background-color:white;border-color: #adadad;color: #4c4c4c;')(type='button', accesskey='p')
                 button.fa.fa-chevron-right.btn.btn-icon.o_pager_next#num01(@click="counter++",style='background-color:white;border-color: #adadad;color: #4c4c4c;')(type='button', accesskey='n')
+
     Reqjobs
         header(style='margin-left:-15px;margin-right:-15px;')(slot='header')
             button.btn.btn-sm#hide(v-on:click="selectid(1)",v-model='dog',type='button',value="1")
@@ -16,7 +18,7 @@
                 span Stop Recruitment
             ul.oe_form_field_status.oe_form_status.o_form_field.o_form_required(data-original-title='', title='')
                 li#b
-                    span.label Recruitment in Progress
+                    span.label Recruitment in Progresss
                     span.arrow
                         span
                 li#a.oe_active
