--- a/src/components/Pages/Leaves/index.jade
+++ b/src/components/Pages/Leaves/index.jade
@@ -1,7 +1,7 @@
 .manufacturing_orders
     DashboardController( v-bind:save='true',v-bind:duplicatedropbtn='true',v-bind:deletedropbtn='true',v-bind:planorderbtn='true',v-bind:actionbtn='true',v-bind:heading="nextactivity",v-bind:createbtn='true',v-bind:importbtn='true', v-bind:links="btnlinks",v-bind:num1='true',v-bind:num2='true',v-bind:paginbtn1='true',v-bind:paginbtn2='true',v-bind:firstbtn='false',v-bind:secondbtn='true',v-bind:fifthbtn='true',v-bind:thirdbtn='false',v-bind:fourthbtn='false',v-bind:searchbar='true',v-bind:dropdownbtn1='true',v-bind:dropdownbtn2='true',v-bind:dropdownbtn3='true')
         .col-sm-6(style='padding:0px;')(slot='job')
-            h4.samodashheading(style="font-size: 18px;") Department Leavess
+            h4.samodashheading(style="font-size: 18px;") Department Leaves
         span.o_pager_value(slot='page') {{counter}}
             |  /
             span.o_pager_limit(style="padding-right: 6px;") {{num}}
